crates/fec-cli/src/commands/snapshots/libfec__commands__contest__tests__contest_ui.snap
---
source: crates/fec-cli/src/commands/contest.rs
expression: terminal.backend()
snapshot_kind: text
---
"California 41st District (2026)  3 candidates                                                       "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"Candidate               Party Receipts       Disbursed      Indiv.         COH            Thru      "
"Ken Calvert (I)         REP    $3,245,000.00  $2,100,000.00  $2,800,000.00  $1,145,000.00 12/31/2025"
"Will Rollins            DEM    $2,890,000.00  $1,950,000.00  $2,600,000.00    $940,000.00 12/31/2025"
"John Q Smith            LIB       $45,000.00     $32,000.00     $40,000.00     $13,000.00 06/30/2025"
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"     q quit  ↑/↓ or j/k navigate  g/  G first/last  o open contest  Enter open candidate  y yank    "
