crates/fec-cli/src/commands/snapshots/libfec__commands__contest__tests__contest_ui_senate.snap
---
source: crates/fec-cli/src/commands/contest.rs
expression: terminal.backend()
snapshot_kind: text
---
"California Senate (2026)  1 candidates                                                              "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"Candidate               Party Receipts       Disbursed      Indiv.         COH            Thru      "
"Dianne Feinstein (I)    DEM    $5,000,000.00  $4,500,000.00  $4,000,000.00    $500,000.00 12/31/2025"
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"     q quit  ↑/↓ or j/k navigate  g/  G first/last  o open contest  Enter open candidate  y yank    "
